feat: se actualizo la forma en la que se devuelven los datos al front para el caso de la persona juridica